add cookie-based auth
