# pkg/user/http_api.go
@@ -1,22 +1,13 @@
 package user
 
 import (
-	"context"
-	"crypto/rand"
-	"encoding/base64"
-	"encoding/json"
 	"errors"
-	"fmt"
-	"io"
 	"net/http"
-	"net/url"
 	"strconv"
 
 	"github.com/gin-gonic/gin"
 	"github.com/minghsu0107/go-random-chat/pkg/common"
 )
-
-const oauthGoogleUrlAPI = "https://www.googleapis.com/oauth2/v2/userinfo?access_token="
 
 // @Summary Create an user
 // @Description Register a new user
@@ -39,30 +30,64 @@ func (r *HttpServer) CreateUser(c *gin.Context) {
 		response(c, http.StatusInternalServerError, common.ErrServer)
 		return
 	}
+	sid, err := r.userSvc.SetUserSession(c.Request.Context(), user.ID)
+	if err != nil {
+		r.logger.Error(err)
+		response(c, http.StatusInternalServerError, common.ErrServer)
+		return
+	}
+	common.SetAuthCookie(c, sid, r.authCookieConfig.MaxAge, r.authCookieConfig.Path, r.authCookieConfig.Domain)
+
 	c.JSON(http.StatusCreated, &UserPresenter{
 		ID:   strconv.FormatUint(user.ID, 10),
 		Name: user.Name,
 	})
 }
 
-// @Summary Get user name
-// @Description Get user name
+// @Summary Check user login status
+// @Description User login
 // @Tags user
 // @Produce json
-// @Param uid path int true "user id"
-// @Success 200 {object} UserPresenter
-// @Failure 400 {object} common.ErrResponse
-// @Failure 404 {object} common.ErrResponse
-// @Failure 500 {object} common.ErrResponse
-// @Router /user/{uid}/name [get]
-func (r *HttpServer) GetUserName(c *gin.Context) {
-	id := c.Param("uid")
-	userID, err := strconv.ParseUint(id, 10, 64)
-	if err != nil {
-		response(c, http.StatusBadRequest, common.ErrInvalidParam)
+// @Param Cookie header string true "session id cookie"
+// @Success 200 {object} common.SuccessMessage
+// @Failure 401 {object} common.ErrResponse
+func (r *HttpServer) Login(c *gin.Context) {
+	_, ok := c.Request.Context().Value(common.UserKey).(uint64)
+	if !ok {
+		response(c, http.StatusUnauthorized, common.ErrUnauthorized)
 		return
 	}
-	user, err := r.userSvc.GetUser(c.Request.Context(), userID)
+	c.JSON(http.StatusOK, common.OkMsg)
+}
+
+// @Summary Get user
+// @Description Get user information
+// @Tags user
+// @Produce json
+// @Param uid query string false "target user id; defaults to self user id if leaved empty"
+// @Param Cookie header string true "session id cookie"
+// @Success 200 {object} UserPresenter
+// @Failure 400 {object} common.ErrResponse
+// @Failure 401 {object} common.ErrResponse
+// @Failure 404 {object} common.ErrResponse
+// @Failure 500 {object} common.ErrResponse
+// @Router /user [get]
+func (r *HttpServer) GetUser(c *gin.Context) {
+	userID, ok := c.Request.Context().Value(common.UserKey).(uint64)
+	if !ok {
+		response(c, http.StatusUnauthorized, common.ErrUnauthorized)
+		return
+	}
+	uid := c.Query("uid")
+	if uid != "" {
+		var err error
+		userID, err = strconv.ParseUint(uid, 10, 64)
+		if err != nil {
+			response(c, http.StatusBadRequest, common.ErrInvalidParam)
+			return
+		}
+	}
+	user, err := r.userSvc.GetUserByID(c.Request.Context(), userID)
 	if err != nil {
 		if errors.Is(err, ErrUserNotFound) {
 			response(c, http.StatusNotFound, ErrUserNotFound)
@@ -73,37 +98,48 @@ func (r *HttpServer) GetUserName(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, &UserPresenter{
-		ID:   id,
+		ID:   strconv.FormatUint(userID, 10),
 		Name: user.Name,
 	})
 }
 
+// @Summary OAuth Google login
+// @Description OAuth Google login endpoint
+// @Tags user
+// @Success 307
+// @Router /user/oauth2/google/login [get]
 func (r *HttpServer) OAuthGoogleLogin(c *gin.Context) {
-	oauthState := r.generateStateOauthCookie(c)
+	oauthState := common.GenerateStateOauthCookie(c, r.oauthCookieConfig.MaxAge, r.oauthCookieConfig.Path, r.oauthCookieConfig.Domain)
 	u := r.googleOauthConfig.AuthCodeURL(oauthState)
 	c.Redirect(http.StatusTemporaryRedirect, u)
 }
 
+// @Summary OAuth Google callback
+// @Description OAuth Google callback endpoint
+// @Tags user
+// @Success 307
+// @Failure 500 {object} common.ErrResponse
+// @Router /user/oauth2/google/callback [get]
 func (r *HttpServer) OAuthGoogleCallback(c *gin.Context) {
-	oauthState, err := c.Request.Cookie("oauthstate")
+	oauthState, err := common.GetCookie(c, common.OAuthStateCookieName)
 	if err != nil {
-		r.logger.Errorf("oauth google state cookie error: %w", err)
+		r.logger.Error(err)
 		c.Redirect(http.StatusTemporaryRedirect, "/")
 		return
 	}
-	unescapedState, err := url.QueryUnescape(oauthState.Value)
-	if err != nil {
-		r.logger.Errorf("unescape oauth google state error: %w", err)
-		c.Redirect(http.StatusTemporaryRedirect, "/")
-		return
-	}
-	if c.Query("state") != unescapedState {
+	if c.Query("state") != oauthState {
 		r.logger.Error("invalid oauth google state")
 		c.Redirect(http.StatusTemporaryRedirect, "/")
 		return
 	}
 
-	googleUser, err := r.getUserDataFromGoogle(c.Request.Context(), c.Request.FormValue("code"))
+	token, err := r.googleOauthConfig.Exchange(c.Request.Context(), c.Request.FormValue("code"))
+	if err != nil {
+		r.logger.Errorf("code exchange wrong: %w", err)
+		c.Redirect(http.StatusTemporaryRedirect, "/")
+		return
+	}
+	googleUser, err := r.userSvc.GetUserDataFromGoogle(c.Request.Context(), token.AccessToken)
 	if err != nil {
 		r.logger.Error(err)
 		c.Redirect(http.StatusTemporaryRedirect, "/")
@@ -112,48 +148,16 @@ func (r *HttpServer) OAuthGoogleCallback(c *gin.Context) {
 	user, err := r.userSvc.GetOrCreateGoogleUser(c.Request.Context(), googleUser.Email, googleUser.Name)
 	if err != nil {
 		r.logger.Error(err)
+		c.Redirect(http.StatusTemporaryRedirect, "/")
+		return
+	}
+	sid, err := r.userSvc.SetUserSession(c.Request.Context(), user.ID)
+	if err != nil {
+		r.logger.Error(err)
 		response(c, http.StatusInternalServerError, common.ErrServer)
 		return
 	}
+	common.SetAuthCookie(c, sid, r.authCookieConfig.MaxAge, r.authCookieConfig.Path, r.authCookieConfig.Domain)
 
-	c.Redirect(http.StatusTemporaryRedirect, common.Join("/?user_id=", strconv.FormatUint(user.ID, 10)))
-}
-
-func (r *HttpServer) generateStateOauthCookie(c *gin.Context) string {
-	b := make([]byte, 16)
-	rand.Read(b)
-	state := base64.URLEncoding.EncodeToString(b)
-	c.SetCookie("oauthstate", state, 3600, "/", r.cookieDomain, false, true)
-	return state
-}
-
-func (r *HttpServer) getUserDataFromGoogle(ctx context.Context, code string) (*GoogleUserPresenter, error) {
-	// Use code to get token and get user info from Google.
-
-	token, err := r.googleOauthConfig.Exchange(ctx, code)
-	if err != nil {
-		return nil, fmt.Errorf("code exchange wrong: %w", err)
-	}
-
-	req, err := http.NewRequest("GET", common.Join(oauthGoogleUrlAPI, token.AccessToken), nil)
-	if err != nil {
-		return nil, fmt.Errorf("create http request error: %w", err)
-	}
-	req = req.WithContext(ctx)
-
-	client := http.DefaultClient
-	response, err := client.Do(req)
-	if err != nil {
-		return nil, fmt.Errorf("failed getting user info: %w", err)
-	}
-	defer response.Body.Close()
-	contents, err := io.ReadAll(response.Body)
-	if err != nil {
-		return nil, fmt.Errorf("failed read google user response: %w", err)
-	}
-	var googleUser GoogleUserPresenter
-	if err := json.Unmarshal(contents, &googleUser); err != nil {
-		return nil, fmt.Errorf("failed marshal google user response: %w", err)
-	}
-	return &googleUser, nil
+	c.Redirect(http.StatusTemporaryRedirect, "/")
 }
